--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-splash-screen": "^3.3.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-vision-camera": "^2.15.4",
+    "react-native-webview": "^11.26.1",
     "rn-local-authentication": "^1.2.5"
   },
   "devDependencies": {
